# codexspectra-hsi

./: .gitignore  CITATION.cff  DATASET.md  MODEL_CARD_TEMPLATE.md  Makefile  README.md  REPRODUCIBILITY.md  RESULTS_SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  full_hyperdoc.yaml  hyperdoc_gt_material_m2.yaml  hyperdoc_real_m2.yaml  m2_quick.yaml  smoke.yaml
docs/: ANALYSIS_REPORT.md  RESULTS_SUMMARY.md
docs/tables/: balanced_classification_report_test.csv  balanced_confusion_matrix_test_counts.csv  balanced_confusion_matrix_test_normalized.csv  balanced_honest_overfitting_diagnostic.csv  balanced_optuna_trials.csv  balanced_training_sample_summary.csv  class_balance.csv  classification_report_test.csv  classification_report_test_expanded.csv  confusion_matrix_test.csv  confusion_matrix_test_counts.csv  confusion_matrix_test_normalized.csv  feature_importance.csv  mean_feature_profile_by_class.csv  metrics_test.csv  overfitting_diagnostic.csv  pca_explained_variance.csv  split_class_balance.csv
reports/: experiment_report.md
reports/tables/: baseline_validation_metrics.csv  classification_report_test.csv  confusion_matrix_test.csv  (+4 more)
scripts/: 00_make_manifest.py  01_preprocess.py  02_train_baselines.py  03_tune_models.py  03b_tune_balanced_rf.py  04_train_deep.py  05_evaluate.py  06_make_report.py  07_make_analysis_figures.py  08_honest_diagnostics.py  09_make_gt_material_features.py  10_make_prediction_overlays.py  run_smoke_test.py  scripts_compat.py
tests/: test_pipeline_outputs.py  test_spectral.py  test_splits.py
(+11 files in other folders)
